force-app/main/default/objects/Account/fields/Subscription_MRR__c.field-meta.xml
<CustomField>
    <fullName>Subscription_MRR__c</fullName>
    <label>Monthly Recurring Revenue</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>