force-app/main/default/objects/Account/fields/Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan__c</fullName>
    <label>Subscription Plan</label>
    <type>Text</type>
    <length>80</length>
</CustomField>